// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register Page test cases Client validation check 1`] = `
<span
  class="css-1reg724"
  role="alert"
>
  <span
    class="css-xjluvf"
  >
    Username is not valid
  </span>
</span>
`;

exports[`Register Page test cases Client validation check 2`] = `
<span
  class="css-1reg724"
  role="alert"
>
   
</span>
`;

exports[`Register Page test cases Client validation check 3`] = `
<span
  class="css-1reg724"
  role="alert"
>
  <span
    class="css-xjluvf"
  >
    Password is not valid
  </span>
</span>
`;

exports[`Register Page test cases Client validation check 4`] = `
<span
  class="css-1reg724"
  role="alert"
>
  <span
    class="css-xjluvf"
  >
    Passwords must match
  </span>
</span>
`;

exports[`Register Page test cases Render check 1`] = `
<div>
  <form
    data-testid="form"
    novalidate=""
  >
    <div
      class="css-gbwc6v"
    >
      <section
        class="css-1c469nw"
      >
        <h2>
          Register Page
        </h2>
        <label
          class="css-fjegpl"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Your username:
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1h6wv30"
              data-testid="username"
              maxlength="8"
              minlength="5"
              name="username"
              placeholder="..."
              spellcheck="false"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-fjegpl"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Your email:
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1h6wv30"
              data-testid="email"
              name="email"
              placeholder="..."
              type="email"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-fjegpl"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Your password:
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1h6wv30"
              data-testid="password"
              maxlength="10"
              minlength="8"
              name="password"
              placeholder="**********"
              type="password"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-fjegpl"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Confirm your password:
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1h6wv30"
              data-testid="passwordConfirmation"
              maxlength="10"
              minlength="8"
              name="passwordConfirmation"
              placeholder="**********"
              type="password"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <button
          class="css-tp74ot"
          style="margin-top: 1rem;"
          type="submit"
        >
          Done
        </button>
        <a
          class="css-1ghpz66"
          href="/login"
          style="margin-top: 1rem; font-weight: bold;"
        >
          Access your account
        </a>
      </section>
    </div>
  </form>
</div>
`;
